--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ button {
   outline: none;
 }
 
-button:hover {
+.navButton:hover {
   background-color: black;
   color: white;
   transition: background-color 1s;
@@ -79,4 +79,53 @@ main {
 .recipe-header {
   font-size: 2em;
   color: white;
+}
+
+.recipe-card {
+  margin: 3%;
+  color: black;
+  width: 20%;
+  height: 400px;
+  border:2px solid black;
+}
+
+.name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 19%;
+  width: 100%;
+  font-size: 20px;
+  border-bottom: 2px solid black;
+}
+
+.recipe-img {
+  width: 100%;
+  height: 65%;
+  border-bottom: 2px solid black;
+}
+
+.favorite-img {
+  width: 20px;
+}
+
+.add-recipe-img {
+  width: 20px;
+}
+
+.card-button-container {
+  height: 15%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
+  border-bottom: 2px solid black;
+}
+
+.all-cards {
+display: flex;
+justify-content: space-around;
+flex-wrap: wrap;
+background-color: #f4f4f4;
 }
