--- a/src/styles.css
+++ b/src/styles.css
@@ -98,6 +98,7 @@ main {
   width: 100%;
   font-size: 20px;
   border-bottom: 2px solid black;
+  background-color: white;
 }
 
 .recipe-img {
@@ -115,7 +116,7 @@ main {
 }
 
 .card-button-container {
-  height: 15%;
+  height: 14%;
   width: 100%;
   display: flex;
   justify-content: space-around;
