--- a/src/styles.css
+++ b/src/styles.css
@@ -87,6 +87,7 @@ main {
   width: 20%;
   height: 400px;
   border:2px solid black;
+  box-shadow: 8px 5px 5px grey;
 }
 
 .name-container {
@@ -98,6 +99,7 @@ main {
   width: 100%;
   font-size: 20px;
   border-bottom: 2px solid black;
+  background-color: white;
 }
 
 .recipe-img {
@@ -114,8 +116,18 @@ main {
   width: 20px;
 }
 
+.add-recipe-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.added-tag {
+  margin: 0px;
+}
+
 .card-button-container {
-  height: 15%;
+  height: 14%;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -128,4 +140,8 @@ display: flex;
 justify-content: space-around;
 flex-wrap: wrap;
 background-color: #f4f4f4;
+}
+
+.trash-icon {
+  width: 20px;;
 }
