--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,7 @@ button {
   width: 33%;
   font-size: 20px;
   outline: none;
+  cursor: pointer;
 }
 
 .navButton:hover {
@@ -131,6 +132,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   background-color: white;
   border-bottom: 2px solid black;
 }
@@ -146,4 +148,22 @@ background-color: #f4f4f4;
 
 .trash-icon {
   width: 20px;;
+}
+
+.instructions-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height: 75%;
+  border-radius: 50%;
+  opacity: 0.7;
+  border: 1px solid black;
+  box-shadow: 5px 3px 3px grey;
+  background-color: lightgray;
+}
+
+.instructions-btn:hover {
+  cursor: pointer;
+  opacity: 0.9;
 }
