--- a/src/styles.css
+++ b/src/styles.css
@@ -1,51 +1,53 @@
 html {
-  font-family: 'Lobster', cursive;
-  height: 100%;
   margin: 0px;
+  height: 100%;
   width: 100%;
+  font-family: 'Lobster', cursive;
 }
 
 body {
-  height: 100%;
   margin: 0px;
+  height: 100%;
   width: 100%;
 }
 
 .main-header {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
   border-bottom: 2px solid black;
-  display: flex;
-  height: 10%;
-  justify-content: space-around;
-  width: 100%;
 }
 
 .user-info {
-  font-size: 1.5em;
   margin-left: 10%;
+  font-size: 1.5em;
 }
 
 .button-container {
-  align-items: center;
-  display: flex;
   height: 100%;
-  justify-content: space-between;
   width: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 button {
   border: 0px;
-  font-size: 20px;
   height: 90%;
-  outline: none;
   width: 33%;
+  font-size: 20px;
+  outline: none;
+  cursor: pointer;
 }
 
-.navButton:hover {
+.navButton:hover,
+.cook-btn:hover {
   background-color: black;
   color: white;
-  outline: none;
   transition: background-color 1s;
+  outline: none;
 }
 
 main {
@@ -54,58 +56,59 @@ main {
 }
 
 .img-container {
-  display: flex;
-  height: 60%;
-  justify-content: center;
-  margin-bottom: 5%;
-  margin-top: 5%;
   width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .home-img {
   display: flex;
-  height: 100%;
   width: 50%;
+  height: 100%;
 }
 
 .recipe-header-container {
-  align-items: center;
+  height: 12%;
   background-color: black;
   display: flex;
-  height: 12%;
   justify-content: center;
+  align-items: center;
 }
 
-.recipe-header {
-  color: white;
+.recipe-header,
+.recipe-instructions-header {
   font-size: 2em;
+  color: white;
 }
 
 .recipe-card {
+  margin: 3%;
+  color: black;
+  width: 20%;
+  height: 400px;
   border:2px solid black;
   box-shadow: 8px 5px 5px grey;
-  color: black;
-  height: 400px;
-  margin: 3%;
-  width: 20%;
 }
 
 .name-container {
-  align-items: center;
-  background-color: white;
-  border-bottom: 2px solid black;
   display: flex;
-  font-size: 20px;
-  height: 19%;
   justify-content: center;
+  align-items: center;
   text-align: center;
+  height: 19%;
   width: 100%;
+  font-size: 20px;
+  border-bottom: 2px solid black;
+  background-color: white;
 }
 
 .recipe-img {
-  border-bottom: 2px solid black;
-  height: 65%;
   width: 100%;
+  height: 65%;
+  border-bottom: 2px solid black;
 }
 
 .favorite-img {
@@ -117,9 +120,9 @@ main {
 }
 
 .add-recipe-button {
-  align-items: center;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .added-tag {
@@ -127,23 +130,79 @@ main {
 }
 
 .card-button-container {
+  height: 14%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-color: white;
   border-bottom: 2px solid black;
-  display: flex;
-  height: 14%;
-  justify-content: space-around;
-  width: 100%;
 }
 
 .all-cards,
 .favs-cards,
 .added-cards{
-background-color: #f4f4f4;
 display: flex;
-flex-wrap: wrap;
 justify-content: space-around;
+flex-wrap: wrap;
+background-color: #f4f4f4;
 }
 
 .trash-icon {
   width: 20px;;
+}
+
+.instructions-page {
+  background-color: #f4f4f4;
+}
+
+.instructions-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height: 75%;
+  border-radius: 50%;
+  opacity: 0.7;
+  border: 1px solid black;
+  box-shadow: 5px 3px 3px grey;
+  background-color: lightgray;
+}
+
+.instructions-btn:hover{
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+.recipe-instructions {
+  width: 95%;
+  height: 80%;
+  font-family: 'Roboto', sans-serif;
+  margin: 5%;
+  font-size: 2em;
+  overflow: scroll;
+}
+
+.cook-btn {
+  border: 1px solid black;
+  height: 9%;
+  width: 15%;
+  font-size: 20px;
+  box-shadow: 5px 3px 3px grey;
+  font-family: 'Lobster', cursive;
+}
+
+.instruction-step {
+  width: 95%;
+}
+
+.needed-list {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  width: 35%;
+  padding: 2%;
+  box-shadow: 5px 3px 3px grey;
+  background-color: white;
+  border: 2px solid black;
+  opacity: 0.7;
 }
