--- a/src/styles.css
+++ b/src/styles.css
@@ -206,3 +206,47 @@ background-color: #f4f4f4;
   border: 2px solid black;
   opacity: 0.7;
 }
+
+.search-container {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 40%;
+  width: 25%;
+  margin-left: 12%;
+}
+
+.search-btn {
+  height: 113%;
+  width: 13%;
+  border: 0px;
+  margin-right: 0px;
+  padding: 0px;
+  outline: none;
+  cursor: pointer;
+}
+
+.search-input {
+  margin-left: 0%;
+  font-size: 1.5em;
+  height: 100%;
+  width: 90%;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  outline: none;
+  padding-left: 10px;
+}
+
+.search-icon {
+  border-top: 1px solid grey;
+  background-color: lightgray;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  width: 100%;
+  height: 100%
+}
+
+.categories {
+  margin-right: 2%;
+  outline: none;
+}
