--- a/src/styles.css
+++ b/src/styles.css
@@ -1,53 +1,57 @@
 html {
-  margin: 0px;
-  height: 100%;
-  width: 100%;
   font-family: 'Lobster', cursive;
+  height: 100%;
+  margin: 0px;
+  width: 100%;
 }
 
 body {
-  margin: 0px;
   height: 100%;
+  margin: 0px;
   width: 100%;
 }
 
 .main-header {
-  width: 100%;
-  height: 10%;
-  display: flex;
-  justify-content: space-around;
   align-items: center;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid #2E2F2F;
+  display: flex;
+  height: 10%;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .user-info {
-  margin-left: 10%;
   font-size: 1.5em;
+  margin-left: 10%;
 }
 
 .button-container {
-  height: 100%;
-  width: 30%;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  width: 30%;
+}
+
+h1{
+  cursor: default;
+  color: #2E2F2F;
 }
 
 button {
   border: 0px;
-  height: 90%;
-  width: 33%;
   font-size: 20px;
+  height: 90%;
   outline: none;
   cursor: pointer;
 }
 
 .navButton:hover,
 .cook-btn:hover {
-  background-color: black;
+  background-color: #2E2F2F;
   color: white;
-  transition: background-color 1s;
   outline: none;
+  transition: background-color 1.25s;
 }
 
 main {
@@ -56,73 +60,101 @@ main {
 }
 
 .img-container {
-  width: 100%;
-  height: 60%;
   display: flex;
+  height: 60%;
   justify-content: center;
-  margin-top: 5%;
   margin-bottom: 5%;
+  margin-top: 5%;
+  width: 100%;
 }
 
 .home-img {
+  border-radius: 3px;
   display: flex;
-  width: 50%;
   height: 100%;
+  width: 50%;
+  box-shadow: 2px 2px 5px #2E2F2F;
+  object-fit: cover;
+  object-position: center center;
 }
 
 .recipe-header-container {
-  height: 12%;
-  background-color: black;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  background-color: #2E2F2F;
+  display: flex;
+  height: 12%;
+  justify-content: center;
 }
 
 .recipe-header,
 .recipe-instructions-header {
   font-size: 2em;
   color: white;
+  font-size: 2em;
 }
 
 .recipe-card {
-  margin: 3%;
-  color: black;
-  width: 20%;
+  box-shadow: 1px 2px 5px #2E2F2F;
+  border-radius: 3px;
+  color: #2E2F2F;
   height: 400px;
-  border:2px solid black;
-  box-shadow: 8px 5px 5px grey;
+  margin: 3%;
+  width: 20%;
+}
+.recipe-card:hover {
+  box-shadow: 3px 4px 7px #2E2F2F;
+  border-radius: 3px;
+  color: #2E2F2F;
+  height: 402px;
+  margin: 2.84%;
+  width: 20.26%;
+}
+
+.recipe-name{
+  font-size: 16px;
+  cursor: default;
+  color: #2E2F2F;
 }
 
 .name-container {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  text-align: center;
-  height: 19%;
-  width: 100%;
-  font-size: 20px;
-  border-bottom: 2px solid black;
   background-color: white;
+  border-bottom: 1px solid #2E2F2F;
+  border-radius: 3px;
+  display: flex;
+  font-size: 20px;
+  height: 19%;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
 }
 
 .recipe-img {
-  width: 100%;
+  border-bottom: 1px solid #2E2F2F;
   height: 65%;
-  border-bottom: 2px solid black;
+  width: 100%;
+  object-fit: cover;
 }
 
 .favorite-img {
   width: 20px;
 }
 
+.favorite-img:hover {
+  width: 22px;
+}
+
 .add-recipe-img {
   width: 20px;
 }
+.add-recipe-img:hover {
+  width: 22px;
+}
 
 .add-recipe-button {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .added-tag {
@@ -136,73 +168,86 @@ main {
   justify-content: space-around;
   align-items: center;
   background-color: white;
-  border-bottom: 2px solid black;
+  display: flex;
+  height: 14%;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .all-cards,
 .favs-cards,
 .added-cards{
-display: flex;
-justify-content: space-around;
-flex-wrap: wrap;
 background-color: #f4f4f4;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
 }
 
 .trash-icon {
   width: 20px;;
 }
 
-.instructions-page {
-  background-color: #f4f4f4;
+
+.intructions-card{
+  background: #f4f4f4;
+}
+
+.saved{
+  color: #f4f4f4;
+  font-size: 12px;
+}
+
+.fav{
+  color: #f4f4f4;
+  font-size: 12px;
 }
 
 .instructions-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
-  height: 75%;
+  width: 60%;
+  height: 76%;
   border-radius: 50%;
-  opacity: 0.7;
-  border: 1px solid black;
-  box-shadow: 5px 3px 3px grey;
-  background-color: lightgray;
+  opacity: 0.9;
+  box-shadow: 1px 2px 3px black;
+  background-color: #2E2F2F;
 }
 
 .instructions-btn:hover{
   cursor: pointer;
-  opacity: 0.9;
+  opacity: 0.7;
+  width: 62%;
 }
 
 .recipe-instructions {
   width: 95%;
   height: 80%;
-  font-family: 'Roboto', sans-serif;
-  margin: 5%;
+  font-family: 'Open Sans', sans-serif;  margin: 5%;
   font-size: 2em;
   overflow: scroll;
 }
 
 .cook-btn {
-  border: 1px solid black;
-  height: 9%;
-  width: 15%;
+  height: 10%;
+  width: 17%;
   font-size: 20px;
-  box-shadow: 5px 3px 3px grey;
+  box-shadow: 1px 1px 3px #2E2F2F;
   font-family: 'Lobster', cursive;
+  background-color: #f4f4f4;
 }
 
 .instruction-step {
   width: 95%;
+  background-color: white;
 }
 
 .needed-list {
   margin-top: 2%;
+  border-radius: 3px;
   margin-bottom: 2%;
   width: 35%;
   padding: 2%;
-  box-shadow: 5px 3px 3px grey;
+  box-shadow: 1px 1px 4px #2E2F2F;
   background-color: white;
-  border: 2px solid black;
-  opacity: 0.7;
 }
