--- a/src/styles.css
+++ b/src/styles.css
@@ -29,16 +29,16 @@ body {
   width: 30%;
 }
 h1{
-  cursor: default;
   color: #2E2F2F;
+  cursor: default;
 }
 button {
   border: 0px;
   border-radius: 2px;
+  cursor: pointer;
   font-size: 20px;
   height: 90%;
   outline: none;
-  cursor: pointer;
 }
 .navButton:hover,
 .cook-btn:hover {
@@ -61,12 +61,12 @@ main {
 }
 .home-img {
   border-radius: 3px;
+  box-shadow: 0px 2px 6px #2E2F2F;
   display: flex;
   height: 100%;
-  width: 50%;
-  box-shadow: 0px 2px 6px #2E2F2F;
   object-fit: cover;
   object-position: center center;
+  width: 50%;
 }
 .recipe-header-container {
   align-items: center;
@@ -78,30 +78,30 @@ main {
 .recipe-header,
 .recipe-instructions-header,
 .recipe-search-header {
-  font-size: 2em;
   color: white;
+  font-size: 2em;
   font-size: 2em;
 }
 .recipe-card {
-  box-shadow: 0px 2px 6px #2E2F2F;
   border-radius: 3px;
+  box-shadow: 0px 2px 6px #2E2F2F;
   color: #2E2F2F;
   height: 400px;
   margin: 3%;
   width: 20%;
 }
 .recipe-card:hover {
-  box-shadow: 0px 4px 8px #2E2F2F;
   border-radius: 3px;
+  box-shadow: 0px 4px 8px #2E2F2F;
   color: #2E2F2F;
   height: 402px;
   margin: 2.84%;
   width: 20.26%;
 }
 .recipe-name{
-  font-size: 16px;
-  cursor: default;
   color: #2E2F2F;
+  cursor: default;
+  font-size: 16px;
 }
 .name-container {
   align-items: center;
@@ -119,26 +119,26 @@ main {
 .recipe-img {
   border-bottom: 1px solid #2E2F2F;
   height: 65%;
-  width: 100%;
   object-fit: cover;
+  width: 100%;
 }
 .favorite-img {
-  width: 20px;
   opacity: .9;
+  width: 20px;
 }
 .favorite-img:hover {
-  width: 21px;
-  opacity: 1;
   font-weight: bold;
+  opacity: 1;
+  width: 21px;
 }
 .add-recipe-img {
-  width: 20px;
   opacity: .9;
+  width: 20px;
 }
 .add-recipe-img:hover {
-  width: 21px;
-  opacity: 1;
   font-weight: bold;
+  opacity: 1;
+  width: 21px;
 }
 .add-recipe-button {
   align-items: center;
@@ -149,15 +149,15 @@ main {
   margin: 0px;
 }
 .card-button-container {
-  height: 14%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
   align-items: center;
   background-color: white;
   display: flex;
+  display: flex;
+  height: 14%;
   height: 14%;
   justify-content: space-around;
+  justify-content: space-around;
+  width: 100%;
   width: 100%;
 }
 
@@ -189,32 +189,32 @@ main {
 }
 
 .instructions-btn {
-  display: flex;
   align-items: center;
-  justify-content: center;
-  width: 75%;
-  height: 76%;
-  border-radius: 50%;
-  opacity: 0.9;
-  box-shadow: 0px 2px 3px grey;
   background-color: #2E2F2F;
+  border-radius: 50%;
+  box-shadow: 0px 2px 3px grey;
+  display: flex;
+  height: 76%;
+  justify-content: center;
+  opacity: 0.9;
+  width: 75%;
 }
 
 .instructions-btn:hover{
+  box-shadow: 0px 3px 4px gray;
   cursor: pointer;
   opacity: 1;
   width: 77%;
-  box-shadow: 0px 3px 4px gray;
 }
 
 .recipe-instructions {
-  width: 95%;
-  height: 80%;
   font-family: 'Open Sans', sans-serif;
-  margin-top: 5%;
   font-size: 16px;
+  height: 80%;
+  margin-top: 5%;
   overflow: scroll;
   padding-left: 5%;
+  width: 95%;
 }
 
 #step-span{
@@ -222,68 +222,68 @@ main {
 }
 
 .cook-btn {
-  height: 10%;
-  width: 17%;
-  font-size: 20px;
+  background-color: #f4f4f4;
   box-shadow: 0px 2px 6px #2E2F2F;
   font-family: 'Lobster', cursive;
-  background-color: #f4f4f4;
+  font-size: 20px;
+  height: 10%;
+  width: 17%;
 }
 
 .instruction-step {
-  width: 95%;
   background-color: white;
+  width: 95%;
 }
 
 .needed-list {
-  margin-top: 2%;
-  border-radius: 3px;
-  margin-bottom: 2%;
-  width: 35%;
-  padding: 2%;
-  box-shadow: 0px 2px 6px #2E2F2F;
   background-color: white;
   border: 2px solid black;
+  border-radius: 3px;
+  box-shadow: 0px 2px 6px #2E2F2F;
+  margin-bottom: 2%;
+  margin-top: 2%;
   opacity: 0.7;
+  padding: 2%;
+  width: 35%;
 }
 
 .search-container {
-  display: inline-flex;
-  justify-content: center;
   align-items: center;
+  display: inline-flex;
   height: 40%;
-  width: 25%;
+  justify-content: center;
   margin-left: 12%;
+  width: 25%;
 }
 
 .search-btn {
-  height: 113%;
-  width: 13%;
   border: 0px;
-  margin-right: 0px;
-  padding: 0px;
-  outline: none;
   cursor: pointer;
+  height: 113%;
+  margin-right: 0px;
+  outline: none;
+  padding: 0px;
+  width: 13%;
 }
 
 .search-input {
-  margin-left: 0%;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
   font-size: 1.5em;
   height: 100%;
-  width: 90%;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  margin-left: 0%;
   outline: none;
   padding-left: 10px;
+  width: 90%;
 }
 
 .search-icon {
-  border-top: 1px solid grey;
   background-color: lightgray;
-  border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  width: 100%;
-  height: 100%
+  border-top: 1px solid grey;
+  border-top-left-radius: 4px;
+  height: 100%;
+  width: 100%
 }
 
 .categories {
